# NebulaMind

./: .gitignore  docker-compose.yml  pom.xml
fastapi-service/: .env.dev  .env.prod  .env.test  README.md  main.py  pyproject.toml  requirements.txt
fastapi-service/app/: main.py
fastapi-service/app/api/v1/: router.py
fastapi-service/app/api/v1/routes/: chat.py  document.py  health.py
fastapi-service/app/core/: config.py  constants.py  enums.py  exceptions.py  response.py  response_builder.py
fastapi-service/app/middlewares/: cors_middleware.py  trace_id_middleware.py
fastapi-service/app/models/: request.py  response.py
fastapi-service/app/repositories/: llm_repository.py
fastapi-service/app/schemas/: document.py
fastapi-service/app/services/: cache_service.py  chat_service.py  embedding_service.py  llm_service.py  rag_service.py  rerank_service.py  vector_service.py
fastapi-service/app/utils/: logger.py  text_splitter.py  trace_id_util.py
fastapi-service/data/vector_store/: index.faiss  index.pkl
fastapi-service/logs/: app.log.2026-06-20
fastapi-service/scripts/: import_docs.py
fastapi-service/tests/: test_chat.py
kb-api/: pom.xml
kb-common/: pom.xml
kb-dao/: pom.xml
kb-service/: pom.xml
kb-web/: pom.xml
vue/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
vue/src/: App.vue  chat.js  main.js
vue/src/api/: chat.js  document.js  index.js  request.js
vue/src/components/: ErrorBoundary.vue  Sidebar.vue  SvgIcon.vue  SystemStatus.vue  TopBar.vue
vue/src/layouts/: AppLayout.vue
(+73 files in other folders)
