[project]
name = "fastapi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope==1.20.7",
    "faiss-cpu>=1.14.3",
    "fastapi==0.115.6",
    "langchain==0.3.8",
    "langchain-community==0.3.7",
    "numpy>=1.26.4",
    "pydantic==2.10.4",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "redis>=8.0.1",
    "sentence-transformers==3.2.1",
    "uvicorn[standard]==0.34.0",
]
